# fastapi-telegram-notifier

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
example/: app.py
src/telegram_notifier/: __init__.py  choices.py  classify.py  client.py  config.py  message.py  middleware.py  models.py  report.py  utils.py
tests/: conftest.py  test_classify.py  test_client.py  test_message.py  test_middleware.py  test_report.py
