[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-telegram-notifier"
version = "0.1.0"
description = "Catch FastAPI exceptions and send formatted error reports to Telegram"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Jakhongir Ganiev", email = "contact@jakhongir.dev" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
keywords = [
    "fastapi",
    "telegram",
    "exception",
    "error",
    "notification",
    "monitoring",
]
dependencies = [
    "fastapi>=0.100.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/ganiyevuz/fastapi-telegram-notifier"
Repository = "https://github.com/ganiyevuz/fastapi-telegram-notifier"
Issues = "https://github.com/ganiyevuz/fastapi-telegram-notifier/issues"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.9.0",
    "httpx",
    "sqlalchemy>=2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/telegram_notifier"]

[tool.hatch.build.targets.sdist]
include = [
    "src/telegram_notifier",
    "LICENSE",
    "README.md",
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.ruff.lint.isort]
known-first-party = ["telegram_notifier"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"